--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     font-family: 'Inconsolata', monospace;
 }
 body{
-    background-image: url('/img/back.jpg');
+    background-image: url('https://jaimin78.github.io/PizzaShop-Template/img/back.jpg');
 }
 /* Navigation */
 #navbar{
